--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "nodemon": "^2.0.16"
   },
   "scripts": {
-    "start": "node ./main.js",
+    "start": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
