--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "proyecto-coder-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "./src/server.js",
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-handlebars": "^6.0.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
   },
   "scripts": {
-    "start": "nodemon ./server.js",
+    "start": "nodemon .src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
