--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/server.js",
   "dependencies": {
     "express": "^4.18.1",
-    "express-handlebars": "^6.0.6"
+    "express-handlebars": "^6.0.6",
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
