--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/server.js",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6"
   },
