--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nueva-carpeta",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "scripts": {
     "start": "nodemon ./server.js",
@@ -20,6 +21,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.0",
+    "mongoose": "^6.4.6",
     "nodemon": "^2.0.18",
     "socket.io": "^4.5.1"
   }
